fixing cards images on small devises

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -119,7 +119,7 @@ body{
 
 
 			.card .image.custom{
-				padding: 0 !important;
+
 				width: 290px !important;
 				height: 210px !important;
 			}
@@ -130,18 +130,25 @@ body{
 				height: 210px !important;
 			}
 
-/*			@media screen and (max-width: 400px) {
+			@media screen and (max-width: 375px) {
 				.card .image.custom .artist_profile_pic{
-					width: 288px !important;
+					width: 289px !important;
 					height: 210px !important;
 				}
 			}
-			@media screen and (max-width: 400px) {
+
+			@media screen and (max-width: 320px) {
+				.card .image.custom .artist_profile_pic{
+					width: 255px !important;
+					height: 210px !important;
+				}
+			}
+/*			@media screen and (max-width: 380px) {
 				.ui.bottom.attached.button{
 					width: 288px !important;
 				}
-			}*/
-
+			}
+*/
 		}
 
 	}
